# Home-Automation-Hub

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  main.cpp
.githooks/: post-commit  post-push
.gitlab/ci/: build_suite_and_notify.ps1
accesspoint/: api.cpp  api.h  server.cpp  server.h
bridge/: hubClient.cpp  hubClient.h  hubProtocol.cpp  hubProtocol.h
bridge/commands/: commandBuilder.cpp  commandBuilder.h
bridge/handlers/: analysisHandler.cpp  analysisHandler.h  bridgeErrorHandler.cpp  bridgeErrorHandler.h  deviceEventHandler.cpp  deviceEventHandler.h  deviceStateHandler.cpp  deviceStateHandler.h  deviceTelemetryHandler.cpp  deviceTelemetryHandler.h  streamHandler.cpp  streamHandler.h
bridge/routing/: messageRouter.cpp  messageRouter.h
bridge/state/: bridgeStateCache.cpp  bridgeStateCache.h
bridge/streams/: streamRegistry.cpp  streamRegistry.h
bridge/subscriptions/: subscriptionManager.cpp  subscriptionManager.h
config/: config.json  configloader.cpp  configloader.h
data/face_gallery/: README.md
docs/: camera-contract.md  ci-smoketest.md  hub-protocol.md  mock-orchestration.md
interface/: bridgeconnection.cpp  bridgeconnection.h
logging/: logger.cpp  logger.h
modules/cameras/: cameraautomation.cpp  cameraautomation.h  cameras.cpp  cameras.h  motiondetector.cpp  motiondetector.h  sounddetector.cpp  sounddetector.h
modules/lights/: lights.cpp  lights.h
modules/routines/: routinemanager.cpp  routinemanager.h
network/: httpclient.cpp  httpclient.h
notifications/: bridgenotifier.cpp  bridgenotifier.h  notifications.cpp  notifications.h
testing/analysis/: mockVisionAnalyzer.cpp  mockVisionAnalyzer.h  occupancyAnalyzer.cpp  occupancyAnalyzer.h  streamAnalysisManager.cpp  streamAnalysisManager.h
testing/automation/: automationEngine.cpp  automationEngine.h  ruleEngine.cpp  ruleEngine.h
testing/debugging/: eventTracer.cpp  eventTracer.h  orchestrationConsole.cpp  orchestrationConsole.h  stateDebugger.cpp  stateDebugger.h
testing/simulation/: orchestrationSimulator.cpp  orchestrationSimulator.h
testing/testing/: integrationTester.cpp  integrationTester.h  workflowTester.cpp  workflowTester.h
tests/: test_main.cpp
threading/: threadmanager.cpp  threadmanager.h
tools/: discord_git_hook.ps1
